[package]
name = "bevy_file_dialog"
version = "0.3.1"
edition = "2021"
authors = ["Richard Hozák"]
description = "File system dialogs for loading and saving files using the Bevy game engine"
homepage = "https://github.com/richardhozak/bevy_file_dialog"
keywords = ["bevy", "gamedev", "file", "dialog"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardhozak/bevy_file_dialog"

[features]
default = ["gtk3"]
# Use XDG Desktop Portal instead of GTK on Linux & BSDs
xdg-portal = ["rfd/xdg-portal"]
gtk3 = ["rfd/gtk3"]

[dependencies]
rfd = { version = "0.12", default-features = false }
crossbeam-channel = "0.5.11"
bevy_tasks = { version = "0.12", features = ["multi-threaded"] }
bevy_app = { version = "0.12", default-features = false }
bevy_ecs = { version = "0.12", default-features = false }
bevy_utils = "0.12"
bevy_derive = "0.12"

[dev-dependencies]
bevy = { version = "0.12", features = ["multi-threaded"] }
