[package]
name = "bevy_file_dialog"
version = "0.7.0"
edition = "2021"
authors = ["Richard Hozák"]
description = "File system dialogs for loading and saving files using the Bevy game engine"
homepage = "https://github.com/richardhozak/bevy_file_dialog"
keywords = ["bevy", "gamedev", "file", "dialog"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/richardhozak/bevy_file_dialog"

[features]
default = ["xdg-portal", "async-std"]
# Use XDG Desktop Portal instead of GTK on Linux & BSDs
xdg-portal = ["rfd/xdg-portal"]
# Use async-std for xdg-portal
async-std = ["rfd/async-std"]
# Use tokio for xdg-portal
tokio = ["rfd/tokio"]
gtk3 = ["rfd/gtk3"]

[dependencies]
rfd = { version = "0.15", default-features = false }
crossbeam-channel = "0.5"
bevy_tasks = { version = "0.16.0", features = ["multi_threaded"] }
bevy_app = { version = "0.16.0", default-features = false }
bevy_ecs = { version = "0.16.0", default-features = false }
bevy_utils = "0.16.0"
bevy_winit = { version = "0.16.0" }
bevy_derive = "0.16.0"

[dev-dependencies]
bevy = { version = "0.16.0", features = ["multi_threaded"] }
